--- a/Website Code/homepage.css
+++ b/Website Code/homepage.css
@@ -251,7 +251,7 @@
     background-color: #fff;
     height: 2048px;
     overflow: hidden;
-    text-align: center;
+    text-align: right;
     font-size: 96px;
     color: #000;
     font-family: Jaldi;
