--- a/Website Code/homepage.css
+++ b/Website Code/homepage.css
@@ -247,11 +247,11 @@
 }
 .homepage {
     width: 75%;
-    position: sticky;
+    position: fixed;
     background-color: #fff;
-    height: 2048px;
+    height: 1024px;
     overflow: hidden;
-    text-align: right;
+    text-align: center;
     font-size: 96px;
     color: #000;
     font-family: Jaldi;
