--- a/Website Code/homepage.css
+++ b/Website Code/homepage.css
@@ -173,10 +173,10 @@
     height: 158px;
 }
 .line-icon {
-    position: absolute;
-    top: 316px;
-    left: 1223px;
-    width: 201px;
+    width: 100%;
+    position: relative;
+    max-width: 100%;
+    overflow: hidden;
     height: 1px;
     object-fit: contain;
 }
