--- a/Website Code/homepage.css
+++ b/Website Code/homepage.css
@@ -180,11 +180,12 @@
     height: 1px;
     object-fit: contain;
 }
+
 .homepage-child5 {
-    position: absolute;
-    top: 315px;
-    left: 46px;
-    width: 201px;
+    width: 100%;
+    position: relative;
+    max-width: 100%;
+    overflow: hidden;
     height: 1px;
     object-fit: contain;
 }
