--- a/Website Code/homepage.css
+++ b/Website Code/homepage.css
@@ -178,17 +178,10 @@
     left: 46px;
     width: 201px;
     height: 1px;
-    object-fit: contain;
+    border-top: 5px solid #FF602B;
+    box-sizing: border-box;
 }
 
-.homepage-child5 {
-    position: absolute;
-    top: 315px;
-    left: 46px;
-    width: 201px;
-    height: 1px;
-    object-fit: contain;
-}
 .paw-5892565-1280-2-icon {
     position: absolute;
     top: 38px;
